force-app/main/default/objects/Order_Item__c/fields/Order_No__c.field-meta.xml
<CustomField>
    <fullName>Order_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order No</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Order Items</relationshipLabel>
    <relationshipName>Order_Items</relationshipName>
    <type>Lookup</type>
</CustomField>