force-app/main/default/objects/Order_Item__c/listViews/Served.listView-meta.xml
<ListView>
    <fullName>Served</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Order_No__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Served</value>
    </filters>
    <label>Served</label>
</ListView>