force-app/main/default/objects/Order_Item__c/listViews/Today_s_Order_Items.listView-meta.xml
<ListView>
    <fullName>Today_s_Order_Items</fullName>
    <columns>NAME</columns>
    <columns>Item_Name__c</columns>
    <columns>Quantity__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today&apos;s Order Items</label>
</ListView>